# dotrepo

./: .env.example  .gitignore  .ignore  .repo  .repomixignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  deny.toml  pyproject.toml  server.json
crates/dotrepo/: Cargo.toml
crates/dotrepo-cli/: Cargo.toml
crates/dotrepo-cli/src/: cli.rs  commands.rs  error.rs  format.rs  lib.rs  main.rs  tests.rs
crates/dotrepo-cli/tests/: ci_command_contract.rs  claim_command_contract.rs  doctor_command_contract.rs  hosted_query_server_contract.rs  manage_command_contract.rs  preview_command_contract.rs  public_command_contract.rs
crates/dotrepo-core/: Cargo.toml
crates/dotrepo-core/src/: adoption.rs  claims.rs  facade_tests.rs  import.rs  lib.rs  promotion.rs  public.rs  query.rs  render.rs  selection.rs  synthesis.rs  util.rs  validation.rs
crates/dotrepo-core/src/facade_tests/: claims.rs  common.rs  import_parsing.rs  import_repository.rs  mod.rs  public.rs  relations.rs  selection.rs  surfaces.rs  validation.rs
crates/dotrepo-core/src/import/: adjudication.rs  commands.rs  escalation.rs  evidence.rs  fields.rs  mod.rs  parsing.rs  toolchain.rs  types.rs
crates/dotrepo-core/src/import/commands/: extraction.rs  mod.rs  policy.rs
crates/dotrepo-core/src/import/escalation/: deterministic.rs  mod.rs  model_ladder.rs  report.rs
crates/dotrepo-core/src/import/parsing/: codeowners.rs  markdown.rs  mod.rs  readme.rs  security.rs  urls.rs
crates/dotrepo-core/src/public/: compare.rs  error.rs  export.rs  mod.rs  pagedigest.rs  profile.rs  relations.rs  search.rs  types.rs
crates/dotrepo-core/src/surfaces/: doctor.rs  mod.rs  readme.rs
crates/dotrepo-core/tests/: adjudication_pipeline.rs  auto_publish.rs  claim_fixture_pack.rs  import_field_scoring.rs  import_fixture_pack.rs  import_quality_gate.rs  import_verification.rs  path_containment.rs  public_batch_limits.rs  public_contract_compatibility.rs  public_error_fixture_pack.rs  public_export_fixture_pack.rs  public_freshness_semantics.rs  public_query_fixture_pack.rs  query_path_parity.rs  regression_fixture_pack.rs  relation_semantics.rs  synthesis_io_semantics.rs  validate_repository_candidates.rs
crates/dotrepo-core/tests/fixtures/: query-path-cases.json
crates/dotrepo-core/tests/fixtures/claims/: README.md  expectations.json
crates/dotrepo-core/tests/fixtures/import/: README.md  expectations.json
crates/dotrepo-core/tests/fixtures/import/admonition-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/backtick-email-security/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/badge-heavy-readme/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/blockquote-tagline-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/description-only-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/docs-label-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/docs-nav-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/downstream-packager-security/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/full-signals/: README.md
crates/dotrepo-core/tests/fixtures/import/html-heading-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/inline-html-wrapper-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/manifest-workflow-agree/: README.md
crates/dotrepo-core/tests/fixtures/import/manifest-workflow-conflict/: Cargo.toml
crates/dotrepo-core/tests/fixtures/import/mixed-codeowners/: CODEOWNERS  README.md
crates/dotrepo-core/tests/fixtures/import/nightly-toolchain-contributing/: CONTRIBUTING.md  Cargo.toml  README.md
crates/dotrepo-core/tests/fixtures/import/promo-link-heading-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/question-heading-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/reference-badge-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/root-conventional-files/: CODEOWNERS  SECURITY.md  evidence.md  record.toml
crates/dotrepo-core/tests/fixtures/import/security-contact-unknown/: README.md  evidence.md  record.toml
crates/dotrepo-core/tests/fixtures/import/security-html-anchor/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/security-mailto-query/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/security-markdown-link/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/security-reference-link/: README.md  SECURITY.md
crates/dotrepo-core/tests/fixtures/import/setext-heading-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/sponsor-heading-readme/: README.md
crates/dotrepo-core/tests/fixtures/import/team-heavy-codeowners/: CODEOWNERS  README.md
crates/dotrepo-core/tests/fixtures/public-contract/: compatibility.json
crates/dotrepo-core/tests/fixtures/public-errors/: README.md
crates/dotrepo-core/tests/fixtures/public-export/: README.md
crates/dotrepo-core/tests/fixtures/public-query/: README.md
crates/dotrepo-crawler/: Cargo.toml  README.md
crates/dotrepo-crawler/src/: adjudication.rs  commands.rs  discover.rs  github.rs  lib.rs  main.rs  materialize.rs  pipeline.rs  report.rs  schedule.rs  state.rs  synth.rs  writeback.rs
crates/dotrepo-crawler/src/pipeline/: merge.rs  mod.rs  synthesis.rs  writeback_gate.rs
crates/dotrepo-crawler/tests/: openrouter_env_escalation.rs  pipeline_offline.rs  targets_file_batch.rs  writeback_gate.rs
crates/dotrepo-crawler/tests/fixtures/targets/: tranche-sample.txt
crates/dotrepo-lsp/: Cargo.toml
crates/dotrepo-lsp/src/: code_actions.rs  completions.rs  diagnostics.rs  dispatch.rs  main.rs  protocol.rs  state.rs  tests.rs
crates/dotrepo-mcp/: Cargo.toml
crates/dotrepo-mcp/src/: dispatch.rs  handlers.rs  lookup.rs  main.rs  test_support.rs  tests.rs  tools.rs
crates/dotrepo-schema/: Cargo.toml
crates/dotrepo-schema/src/: lib.rs
crates/dotrepo-transport/: Cargo.toml
crates/dotrepo-transport/src/: lib.rs
crates/dotrepo/src/: main.rs
(+7739 files in other folders)
