[workspace]
members = [
  "crates/dotrepo-schema",
  "crates/dotrepo-core",
  "crates/dotrepo-cli",
  "crates/dotrepo-mcp",
  "crates/dotrepo-lsp",
  "crates/dotrepo-transport",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["dotrepo contributors"]
repository = "https://github.com/dotrepo/dotrepo"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
thiserror = "1"
