[workspace]
members = [
  "crates/dotrepo-schema",
  "crates/dotrepo-core",
  "crates/dotrepo-crawler",
  "crates/dotrepo-cli",
  "crates/dotrepo-mcp",
  "crates/dotrepo-lsp",
  "crates/dotrepo-transport",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["dotrepo contributors"]
repository = "https://github.com/maxwellsantoro/dotrepo"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotrepo-core = { version = "1.0.0", path = "crates/dotrepo-core" }
dotrepo-schema = { version = "1.0.0", path = "crates/dotrepo-schema" }
dotrepo-transport = { version = "1.0.0", path = "crates/dotrepo-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
thiserror = "1"
