[workspace]
members = [
  "crates/dotrepo-schema",
  "crates/dotrepo-core",
  "crates/dotrepo-crawler",
  "crates/dotrepo-cli",
  "crates/dotrepo-mcp",
  "crates/dotrepo-lsp",
  "crates/dotrepo-transport",
]
# crates/dotrepo is the installable alias for dotrepo-cli. It is excluded
# because both packages emit a binary named `dotrepo`, which collides inside
# one workspace target directory.
exclude = ["crates/dotrepo"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
rust-version = "1.90.0"
license = "MIT"
authors = ["dotrepo contributors"]
repository = "https://github.com/maxwellsantoro/dotrepo"
homepage = "https://dotrepo.org/"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
dotrepo-core = { version = "1.0.1", path = "crates/dotrepo-core" }
dotrepo-schema = { version = "1.0.1", path = "crates/dotrepo-schema" }
dotrepo-transport = { version = "1.0.1", path = "crates/dotrepo-transport" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
thiserror = "1"
