[project]
name = "dotrepo-python-tools"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pyyaml>=6,<7",
    "requests>=2.31,<3",
    "ruff>=0.14.0,<0.15",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
