[package]
name = "dotrepo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dotrepo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotrepo-core = { path = "../dotrepo-core" }
dotrepo-schema = { path = "../dotrepo-schema" }
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
