[package]
name = "dotrepo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reference CLI for the dotrepo repository metadata protocol."
readme = "../../README.md"

[[bin]]
name = "dotrepo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotrepo-core.workspace = true
dotrepo-schema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
