[package]
name = "dotrepo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core parsing, validation, trust, and export logic for dotrepo."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
rayon.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
toml.workspace = true
dotrepo-schema.workspace = true

[lints.clippy]
perf = "warn"

[dev-dependencies]
serde.workspace = true
