[package]
name = "dotrepo-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "dotrepo-lsp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dotrepo-core = { path = "../dotrepo-core" }
dotrepo-schema = { path = "../dotrepo-schema" }
dotrepo-transport = { path = "../dotrepo-transport" }
serde.workspace = true
serde_json.workspace = true
toml-span = "0.7"
url = "2"
