[package]
name = "dotrepo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stdio MCP server for trust-aware dotrepo operations."
readme = "../../README.md"

[[bin]]
name = "dotrepo-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dotrepo-core.workspace = true
dotrepo-schema.workspace = true
dotrepo-transport.workspace = true
serde.workspace = true
serde_json.workspace = true
