[package]
name = "dotrepo-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Schema types and manifest parsing for the dotrepo protocol."
readme = "../../README.md"
homepage.workspace = true
keywords = ["metadata", "repository", "protocol", "toml", "schema"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
