[package]
name = "dotrepo-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared JSON-RPC transport helpers for dotrepo services."
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
